Dims case index backgrounds to ensure readability.

--- a/app/assets/stylesheets/case.css.scss
+++ b/app/assets/stylesheets/case.css.scss
@@ -94,6 +94,15 @@
   margin: 0 0.5rem;
   padding: 0.5rem 1.5rem;
   position: relative;
+  overflow: hidden;
+
+  &-credits {
+    transition: box-shadow .15s cubic-bezier(.33, .66, .66, 1);
+    box-shadow: 0 0 0 10em rgba(0,0,0,0), inset 0 0 0 10em rgba(0,0,0,0);
+    &.dimmed {
+      box-shadow: 0 0 0 10em rgba(0,0,0,.5), inset 0 0 0 10em rgba(0,0,0,.5);
+    }
+  }
 
   &-unpublished {
     cursor: default;
